# soccer-player-tracking

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
data/app/: soccer-ball-background-display-with-analytics-statistics-graphs_1061279-993.avif
data/dataset/: dataset.yaml
data/dataset/labels/: train.cache  val.cache
data/dataset/labels/test/: frame_000015.txt  frame_000055.txt  frame_000065.txt  frame_000175.txt  frame_000350.txt
data/frames/: frame_000000.json  frame_000000.xml  frame_000005.json  frame_000005.xml  frame_000010.json  frame_000010.xml  frame_000015.json  frame_000015.xml  frame_000020.json  frame_000020.xml  frame_000025.json  frame_000025.txt  frame_000025.xml  frame_000030.json  frame_000030.xml  frame_000035.json  frame_000035.txt  frame_000035.xml  frame_000040.json  frame_000040.txt  frame_000040.xml  frame_000045.json  frame_000045.txt  frame_000050.json  frame_000055.json  frame_000060.json  frame_000060.txt  frame_000065.json  frame_000070.json  frame_000070.txt  frame_000075.json  frame_000075.txt  frame_000080.json  frame_000085.json  frame_000085.txt  frame_000090.json  frame_000095.json  frame_000095.txt  frame_000100.json  frame_000100.txt  (+87 more)
frontend/: app.py
pipelines/: config.py  main_inference_pipeline.py  main_labeling_pipeline.py  main_processing_pipeline.py  main_training_pipeline.py
src/data_labeling/: video_to_frames.py
src/data_processing/: labelme_to_yolo.py  prepare_dataset.py  xml_to_yolo.py  yolo_to_labelme.py
src/model_training/: inference.py  train.py
(+36 files in other folders)
